[package]
name = "code-pls"
authors = ["ro"]
description = "Simple bot to prompt coding questions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.69", features = ["TextDecoder", "TextEncoder"] }

[workspace]